--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+aiosqlite==0.19.0
+alembic==1.12.0
 fastapi==0.103.1
 orjson==3.9.7
 Pillow==10.0.1
+pydantic==2.3.0
 python-dotenv==1.0.0
 qrcode==7.4.2
+SQLAlchemy==2.0.21
 uvicorn==0.23.2
