--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+aioshutil==1.3
 aiosqlite==0.19.0
 alembic==1.12.0
 fastapi==0.103.1
+numpy==1.26.0
+opencv-python==4.8.0.76
 orjson==3.9.7
 Pillow==10.0.1
 pydantic==2.3.0
 python-dotenv==1.0.0
+python-multipart==0.0.6
 qrcode==7.4.2
 SQLAlchemy==2.0.21
 uvicorn==0.23.2
